#ifndef APP_H
#define APP_H
#include "file_handler.h"
#include "car_dealer.h"
#include "car_record.h"
#include "user_interface.h"

class App{
    public:
        void run(std::string path);
};


#endif